--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Time, Space, Complexity</h1>
+	<p>
+		Time complexity is a measure of the amount of time an algorithm takes to run as a function of the size of its input. An efficient algorithm will have a lower time complexity, ensuring faster execution even with large inputs.
+	</p>
+	<p><b>Space Complexity</b>refers to the amount of memory space an algorithm needs relative to the input size. For example, if an algorithm uses O(n) extra space, it means the memory consumption grows linearly with the input size.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
